<resources>
    <string name="app_name">유아 돌보미</string>
    <string name="titleClothes">외출복 추천</string>
    <string name="titleDaily">데일리 이유식</string>
    <string name="titleCompare">유아 비교</string>
    <string name="titleBoard">게시판</string>
    <string name="mybabytext">[우리 아이 성장 상태]</string>
    <string name="avgbabytext">[평균 아이 성장 상태]</string>
    <string name="touchbtn">우리 아이 성장 상태 비교\n버튼을 눌러주세요</string>
    <string name="lessgrowtext">우리아이는 평균보다\n조금 작아요</string>
    <string name="normalgrowtext">우리아이는 평균만큼\n잘 크고 있어요</string>
    <string name="moregrowtext">우리아이는 평균보다\n조금 커요</string>\
    <string name="availablefood">이번 달 부터 먹어도 되는 음식들</string>
</resources>
