<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/compareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="우리 아이 성장 상태 비교"
            android:textSize="20sp"
            android:background="@drawable/shape_button"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/questionsignimg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/questionsign"
                android:visibility="visible"/>
            <ImageView
                android:id="@+id/yellowlightimg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/yellowlight"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/greenlightimg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/greenlight"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/redlightimg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/redlight"
                android:visibility="invisible"/>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/mybabytext"
                android:textSize="20sp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/questionmarkimg"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/questionmark"
                    android:visibility="visible"/>
                <ImageView
                    android:id="@+id/lessgrowimg1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/lessgrow"
                    android:visibility="invisible"/>
                <ImageView
                    android:id="@+id/normalgrowimg1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/normalgrow"
                    android:visibility="invisible"/>
                <ImageView
                    android:id="@+id/moregrowimg1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/moregrow"
                    android:visibility="invisible"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/avgbabytext"
                android:textSize="20sp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/normalgrow"
                    android:visibility="visible"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/touchbtntxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/touchbtn"
                android:textSize="35sp"
                android:gravity="center"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/lesstxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lessgrowtext"
                android:textSize="40sp"
                android:gravity="center"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/normaltxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/normalgrowtext"
                android:textSize="40sp"
                android:gravity="center"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/moretxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moregrowtext"
                android:textSize="40sp"
                android:gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
